# mavlink-router

./: README.md  meson-cross-aarch64.ini  meson-cross-armhf.ini  meson.build
.github/workflows/: main.yml
examples/: heartbeat-print.cpp  meson.build  px4-offboard-mode.cpp
src/: comm.h  endpoint.cpp  endpoint.h  endpoints_test.cpp  main.cpp  mainloop.cpp  meson.build  tlog.cpp
src/common/: endian_compat.h  meson.build  serial.h  serial_linux.cpp  serial_macos.cpp  socket_compat.h  time_compat.h  util.h
tools/: ci-create-rootfs.sh
